마크업 수정
문서와 화면에서 차이나는 부분 수정

--- a/200909.md
+++ b/200909.md
@@ -52,34 +52,39 @@
   - Binary Operator(이항연산자): 피연산자가 두 개인 경우
 
     ```swift
-    a+b // 1. 🙆...🤷
-    a + b // 2. 🙆
-    a+ b // 3. 🙅
+    a+b
+    // 1. 🤷
     
-    // 이항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 같아야 한다.
+    a + b
+    // 2. 🙆
+    
+    a+ b
+  // 3. 🙅
+    
+  // 이항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 같아야 한다.
     // 사이 공백을 주지 않아도 되지만, 가끔 오류가 날 수 있으므로 2번째 예시가 권장!
-    ```
-
+  ```
   
-
+  
+  
   - Ternary Operator(삼항연산자 또는 조건연산자): 피연산자가 세 개인 경우
-
-    ```swift
+  
+  ```swift
     a ? b : C
-    
+  
     // 양쪽에 공백을 한 칸씩 주어야 한다.
-    ```
-
-    
-
-  - `Precedence(우선순위)`    연산자마다 Precedence(우선순위)를 가지고 있다. 먼저 계산하고 싶은 식에 `() Parentheses` 를 사용해서 우선순위를 줄 수 있다.
-
+  ```
+  
+  
+  
+- `Precedence(우선순위)`    연산자마다 Precedence(우선순위)를 가지고 있다. 먼저 계산하고 싶은 식에 `() Parentheses` 를 사용해서 우선순위를 줄 수 있다.
   
 
+  
   - `Associativity(결합규칙)`    우선 순위가 없을 경우 좌결합성(왼쪽에서 오른쪽으로 계산)
-
   
-
+  
+  
   - 연산자 위치에 따라 연산자가 앞에 있다면 전치 연산자(prefix), 뒤에 있다면 후치 연산자(postfix), 안쪽에 있다면 infix라고 부른다.
 
 
@@ -158,9 +163,11 @@
      false && true // false
      false && false // false
      
-     // 📋 Short-circuit evaluation(단락평가)
-     			값이 true일 때 실행되는 코드를 Logical And Operator를 사용할 때 첫번째 피연산자가 false라면,
-     			두번째 피연산자를 평가하지 않기 때문에 효율적으로 사용할 수 있다.
+     /*
+     📋 Short-circuit evaluation(단락평가)
+     값이 true일 때 실행되는 코드를 Logical And Operator를 사용할 때 첫번째 피연산자가 false라면,
+     두번째 피연산자를 평가하지 않기 때문에 효율적으로 사용할 수 있다.
+     */
      
      true || true // true
      true || false // true
@@ -197,8 +204,8 @@
 
 - ####  복합 할당 연산자 (Addition Assignment Operator)
 
-  - a += b  == a = a + b
-  - a -= b == a = a - b
+  - a += b
+  - a -= b
 
 
 
@@ -211,14 +218,15 @@
     ```swift
     a ... b // a부터 b까지의 범위, 오름차순이 기준이고 내림차순으로 사용하고 싶을 땐
     (a ... b).reversed() // 로 표현한다.
+    
+//📋 단항 연산자로 사용할 땐, 피연산자와 공백없이 붙여서 써야 하고 무한 loop에 빠지지 않도록 주의할 것!
     ```
 
-    📋 단항 연산자로 사용할 땐, 피연산자와 공백없이 붙여서 써야 하고 무한 loop에 빠지지 않도록 주의할 것!
-
+     
+     
   - Half-Open Range Operator는  a ..< b 처럼 Upperbound가 범위에 포함되지 않는다.
   
-- `.contains` 특정한 값이 범위에 포함되는지 확인하는 method ✨
-  
+  - `.contains` 특정한 값이 범위에 포함되는지 확인하는 method ✨
 
 
 
