--- a/200910.md
+++ b/200910.md
@@ -54,7 +54,7 @@
   - `else`  블록은 한 번만 작성할 수 있고 생략할 수 있다.
 
     ```swift
-  let myAgeIs: Int = 29
+    let myAgeIs: Int = 29
     
     if myAgeIs > 30 {
         print("당신은 30대입니다.")
@@ -62,25 +62,31 @@
         print("당신은 20대입니다.")
     }
     
-    // Prints: 당신은 20대입니다.
-    // myAgeIs값이 30보다 작으니까 condition이 false로 평가된다.
-    // if블록의 condition이 false인 경우 else블록이 실행된다.
+    /*
+    Prints: 당신은 20대입니다.
+    myAgeIs값이 30보다 작으니까 condition이 false로 평가된다.
+    if블록의 condition이 false인 경우 else블록이 실행된다.
+    */
     ```
+  
+    
   
   - `else if` 블록은 if 블록과 else 블록 사이에 위치한다.
   If 블록의 condition이 false로 평가될 경우, 이어지는 다음 else if 블록이 실행되고, true로 평가될 경우 블록이 실행된다. false로 평가되는 경우 다시 이어지는 다음 블록으로 실행이 된다.
     else if 블록은 이론상 원하는 만큼 언제든지 추가할 수 있다. 
-  
+
     📋 else if 블록과 else 블록은 if 문(if 블록)을 사용할 때만 사용 가능하다. 
 
     📋 생략하면 if 조건문이 아니기 때문에, if 블록은 당연히 생략할 수 없다.
 
     📋 if 블록 안에 또 다른 if 블록을 넣어 원하는 값을 얻을 수 있다.
-
+  
     📋 순차적으로 condition을 평가하기 떄문에, 원하는 결과를 얻기 위해선 가장 까다로운 조건을 먼저 처리해야 한다. ✨
-
+  
+    
+  
     ```swift
-  var weather = "☔️"
+    var weather = "☔️"
     
     if weather == "☀️" {
       print("오늘날씨, 맑음!")
@@ -204,8 +210,6 @@
 
 
 
-
-
 - #### while 반복문
 
   - 조건에 따라서 반복 여부를 결정한다. 조건이 true일 경우 코드를 반복한다.
@@ -301,8 +305,7 @@
 
 - #### continue
 
-  - 현재 실행중인 반복을 중지하고 다음 반복으로 제어를 전달(다음 반복을 시작)한다. **반복문에서만 사용**한다.
-    				   가장 **인접한 문장에만 영향**을 준다.
+  - 현재 실행중인 반복을 중지하고 다음 반복으로 제어를 전달(다음 반복을 시작)한다. **반복문에서만 사용**한다.  가장 **인접한 문장에만 영향**을 준다.
 
   ```swift
   for num in 0...5 {
