마크업 수정
파일과 웹 상에서 다르게 표시되는 부분 수정

--- a/200910.md
+++ b/200910.md
@@ -198,7 +198,7 @@
   ```
 
   - for in 반복문을 통해 지정된 횟수만큼 코드를 반복하고 컬렉션을 열거할 수 있다.
-- for in 반복문 내부에서 반복 상수를 사용하지 않을 경우, `_`(Under Score)문자로 생략 할 수 있다. 이런 패턴을 Wildcard Pattern이라고 한다.
+- for in 반복문 내부에서 반복 상수를 사용하지 않을 경우, `_` 문자로 생략할 수 있다. 이런 패턴을 wildcard pattern이라고 한다.
   
 ```swift
   for _ in 1...5 {
