마크업, 오타 수정

--- a/200909.md
+++ b/200909.md
@@ -60,26 +60,25 @@
     
     a+ b
   // 3. 🙅
-    
-  // 이항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 같아야 한다.
+    // 이항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 같아야 한다.
     // 사이 공백을 주지 않아도 되지만, 가끔 오류가 날 수 있으므로 2번째 예시가 권장!
-  ```
+    ```
   
   
   
   - Ternary Operator(삼항연산자 또는 조건연산자): 피연산자가 세 개인 경우
   
-  ```swift
-    a ? b : C
-  
+    ```swift
+     a ? b : C
+    
     // 양쪽에 공백을 한 칸씩 주어야 한다.
-  ```
+    ```
+  
+    
+  
+  - `Precedence(우선순위)`    연산자마다 Precedence(우선순위)를 가지고 있다. 먼저 계산하고 싶은 식에 `() Parentheses` 를 사용해서 우선순위를 줄 수 있다.
   
   
-  
-- `Precedence(우선순위)`    연산자마다 Precedence(우선순위)를 가지고 있다. 먼저 계산하고 싶은 식에 `() Parentheses` 를 사용해서 우선순위를 줄 수 있다.
-  
-
   
   - `Associativity(결합규칙)`    우선 순위가 없을 경우 좌결합성(왼쪽에서 오른쪽으로 계산)
   
@@ -215,21 +214,24 @@
   -  `a ... b` 의 형태로 이항 연산자와 사용할 수 있고,
      `a...`  또는  `...a`처럼 단항연산자에도 사용할 수 있다.
 
+   
+  
     ```swift
     a ... b // a부터 b까지의 범위, 오름차순이 기준이고 내림차순으로 사용하고 싶을 땐
-    (a ... b).reversed() // 로 표현한다.
-    
-//📋 단항 연산자로 사용할 땐, 피연산자와 공백없이 붙여서 써야 하고 무한 loop에 빠지지 않도록 주의할 것!
+(a ... b).reversed() // 로 표현한다.
     ```
-
-     
-     
-  - Half-Open Range Operator는  a ..< b 처럼 Upperbound가 범위에 포함되지 않는다.
   
-  - `.contains` 특정한 값이 범위에 포함되는지 확인하는 method ✨
-
-
-
+  
+  
+  📋 단항 연산자로 사용할 땐, 피연산자와 공백없이 붙여서 써야 하고 무한 loop에 빠지지 않도록 주의할 것!
+  
+  
+    - Half-Open Range Operator는  a ..< b 처럼 Upperbound가 범위에 포함되지 않는다.
+  
+    - `.contains` 특정한 값이 범위에 포함되는지 확인하는 method ✨
+  
+  
+  
 - #### 연산자 메소드 (Operator Methods)
 
   - 컴파일러는 인스턴스를 비교하는 방법을 모르기 때문에, 직접 구현해야 한다.
