--- a/200910.md
+++ b/200910.md
@@ -30,6 +30,10 @@
 
 
 
+### 4. 기타메모**
+
+
+
 ------
 
 
@@ -200,6 +204,8 @@
   - for in 반복문을 통해 지정된 횟수만큼 코드를 반복하고 컬렉션을 열거할 수 있다.
   - for in 반복문 내부에서 반복 상수를 사용하지 않을 경우, `_` 문자로 생략할 수 있다. 이런 패턴을 wildcard pattern이라고 한다.
   
+  
+  
   ```swift
   for _ in 1...5 {
   	print("hello")
@@ -225,12 +231,14 @@
 
   - `repeat-while`   while 반복문과 다르게 코드를 먼저 실행한 다음, 조건을 판단한다.
 
+  
+  
   ```swift
   repeat {
   statements
-  } while condition
+} while condition
   ```
-
+  
   ```swift
   // while문과 repeat-while문의 차이
   
@@ -259,9 +267,9 @@
   /*
   일단 condition에 관계 없이 repeat코드블록을 실행한다. 그 다음, 조건을 평가한다.
   Prints: 101
-  */
+*/
   ```
-
+  
   
 
 |                   for in Loop                    |                        while Loop                         |
@@ -283,6 +291,8 @@
 
   - 현재 실행중인 문장을 종료하고, 이어지는 다음 문장으로 제어를 전달한다. (문장이 중첩되어 있을 경우 **가장 인접한 문장만 종료**한다.)
     			 반복문과 switch문에서 사용한다.
+
+  
 
   ```swift
   for father in "아버지가방에들어가신다" {
@@ -306,6 +316,8 @@
 - #### continue
 
   - 현재 실행중인 반복을 중지하고 다음 반복으로 제어를 전달(다음 반복을 시작)한다. **반복문에서만 사용**한다.  가장 **인접한 문장에만 영향**을 준다.
+
+  
 
   ```swift
   for num in 0...5 {
@@ -345,6 +357,8 @@
   - break, continue와 함께 사용되며 반복문, if문, switch문에서 주로 사용한다.
   - Label을 전달하면 가장 인접한 문장을 제어하는 게 아니라, 동일한 Label을 가진 문장을 제어한다.
 
+  
+  
   ```swift
   outer: for i in 1...3 {
   	print("OUTER LOOP". i)
