--- a/200910.md
+++ b/200910.md
@@ -30,7 +30,7 @@
 
 
 
-### 4. 기타메모**
+### **4. 기타메모**
 
 
 
@@ -230,13 +230,11 @@
   ```
 
   - `repeat-while`   while 반복문과 다르게 코드를 먼저 실행한 다음, 조건을 판단한다.
-
   
   
   ```swift
   repeat {
-  statements
-} while condition
+  statements} while condition    
   ```
   
   ```swift
@@ -245,7 +243,7 @@
   var num = 100
   
   while num < 100 {
-  	num += 1
+    num += 1
   }
   
   print(num)
@@ -267,7 +265,7 @@
   /*
   일단 condition에 관계 없이 repeat코드블록을 실행한다. 그 다음, 조건을 평가한다.
   Prints: 101
-*/
+  */
   ```
   
   
@@ -275,6 +273,7 @@
 |                   for in Loop                    |                        while Loop                         |
 | :----------------------------------------------: | :-------------------------------------------------------: |
 | 범위, 컬렉션을 반복 (반복 횟수를 예측할 수 있음) | 조건에 따라 결과를 반복 (반복 횟수를 쉽게 예측할 수 없음) |
+
 
 
 
@@ -318,7 +317,7 @@
   - 현재 실행중인 반복을 중지하고 다음 반복으로 제어를 전달(다음 반복을 시작)한다. **반복문에서만 사용**한다.  가장 **인접한 문장에만 영향**을 준다.
 
   
-
+  
   ```swift
   for num in 0...5 {
       if num.isMultiple(of: 2) {
