9월 11일 목차 수정

--- a/200911.md
+++ b/200911.md
@@ -8,11 +8,8 @@
 
 ### **1.  Optional**
 
--  토큰, 표현식, 문장
--  Literal, Identifier, Keyword 
--  Compile, Link, Run
--  특수문자
--  First Class Citizen ✨ 
+-  Optional Type
+-  Unwrapping 
 
 
 
@@ -62,7 +59,7 @@
 
       
 
-  - **Optional Binding** 
+  - Optional Binding 
 
     ```swift
     if let name: Type = OptionalExpression {
