20/09/11일 파일 수정
옵셔널 내용 보충

--- a/200909.md
+++ b/200909.md
@@ -264,5 +264,6 @@
 ### 2. 기타메모
 
 - `.becomeFirstResponder()` Asks UIKit to make this object the first responder in its window.
-  📋  선택한 개체가 첫번째 응답자가 되기를 원할 때 사용
-- app crash가 발생하지 않으면 좋지만, 최대한 줄여야 한다. 
+  📋  선택한 개체를 첫번째 Responder(마우스 커서가 위치하는 곳)로 설정하고 싶을 때 사용
+- `truncatingRemainder(dividingBy:)` 소수점 자료형에서 나머지값을 구한다. (정수형일땐 % 사용)
+
