--- a/200911.md
+++ b/200911.md
@@ -9,7 +9,12 @@
 ### **1.  Optional**
 
 -  Optional Type
--  Unwrapping 
+-  Unwrapping
+-  Optional Chaining
+
+
+
+### **2.  기타메모**
 
 
 
@@ -37,7 +42,10 @@
 
 - #### Unwrapping
 
-  - Optional로 포장되어있는 값을 추출하는 것을 Unwrapping이라고 한다. Unwrapping하면 Non-optional Type으로 결과가 return된다.
+  - Optional로 포장된 값을 추출하고 Unwrapping이라고 부른다. Unwrapping하면 Non-optional Type으로 결과가 return된다.
+
+  
+
   - Optional Type에 저장된 값을 사용하려면 반드시 Unwrapping해야 한다. 
 
   
@@ -61,57 +69,75 @@
 
   - Optional Binding 
 
+    - Optional Binding을 사용해서 안전하고 직관적으로 Unwrapping할 수 있다.
+    - if문, while문, guard문에서 사용할 수 있다.
+
     ```swift
     if let name: Type = OptionalExpression {
-    statements
+    	statements
     }
+    
+    while let name: Type = OptionalExpression {
+        statements
+    }
+    
+    guard name: Type = OptionalExpression else {
+        statements
+      }
     
     // let name: Type = OptionalExpression
     // 이 부분을 Binding이라고 부른다. ✨
     ```
+
+    
 
     - if문 뒤에 condition이 아니라, 상수 선언 문법이 온다. 대신, 초기값은 Optional Expression으로 대체된다.
     - 기존의 if문은 condition을 평가하고 코드가 실행되었지만, Binding은 코드가 실행되는 조건이 다르다.
       1. 먼저 Optional Expression을 평가한다.
       2. 값이 return이 된다면,  **Unrapping되어 임시상수에 저장**이 된다. (Binding에 성공, 필요에 따라 변수도 사용할 수 있다.)
       3. 반대로 nil이 return이 된다면, Binding에 실패했기 때문에 다음 문장으로 제어를 넘긴다.
-    - Optional Expression이 값을 return하는 경우에만 Unrapping하기 때문에, 강제추출과 같은 에러는 발생하지 않는다.
+        4. Optional Expression이 값을 return하는 경우에만 Unrapping하기 때문에, 강제추출과 같은 에러는 발생하지 않는다.
 
-    ```swift
-    var str: String? = "str"
     
+
+      ```swift
+    var str: String? = "str"
+      
     guard let str = str else {
-        fatalError()
+       fatalError()
     }
     str
-    
+      
     // guard문에서 binding한 상수는, 꼭 else블록 다음에 사용해야 한다.
-    ```
+      ```
 
-    ```swift
-    let a: Int? = 0
-    let b: String? = "str"
+      ```swift
+      let a: Int? = 0
+      let b: String? = "str"
+      
+      if let num = a, let str = b, str.count > 2 {
+      	print("Hello, Swift")
+      }
+      
+      // Binding을 한 번 이상 사용할 수 있고, 필요에 따라 condition도 추가할 수 있다.
+      ```
+
     
-    if let num = a, let str = b, str.count > 2 {
-    	print("Hello, Swift")
-    }
-    
-    // Binding을 한 번 이상 사용할 수 있고, condition도 추가할 수 있다.
-    ```
 
-  
+  - Implicitly Unwrapped Optional (IUO, 굳이 번역하자면 암시적으로 혹은 자동으로 추출되는 옵셔널)
 
-  - Implicitly Unwrapped Optional (IUO)
-
+    - 자료형 이름 뒤에 `!` 를 붙여준다.
     - 어떤 특정 조건에서  값이 자동으로 추출된다.
     - IUO는 형식추론을 사용하는 경우 자동으로 추출되지 않는다.
-    - nil이 저장되어 있는 상태에서 값을 추출하면 에러가 발생한다.
+    - nil이 저장되어 있는 상태에서 값을 추출하면 강제추출과 마찬가지로 에러가 발생한다.
+    - IBOUtlet에서 사용하는 이유는, 연결되지 않은 Outlet을 컴파일 시점에서 미리 발견하기 위해서 사용한다.
 
     ```swift
     let num: Int! = 12
     
     let a = num
     a
+    // a는 Optional Int Type
     
     let b: Int = num
     ```
@@ -120,13 +146,22 @@
 
   - Nil-Coalescing Operator
 
-    - Nil-Coalescing Operator를 사용하면 값이 저장되어있는지 확인하는 코드와 값을 추출하는 코드를 직접 작성할 필요가 없다.
-    - 이상 연산자다.
+    ```swift
+    a ?? b
+    
+    // 왼쪽의 피연산자는 항상 Optional Expression이어야 하고, 오른쪽 피연산자는 Non-Optional Expression이어야 한다.
+    ```
+
+    
+
+    - Nil-Coalescing Operator를 사용하면 값이 저장되어 있는지 확인하는 코드와 값을 추출하는 코드를 직접 작성할 필요가 없다.
+    - 이항 연산자이다. 단락평가로 처리하기 때문에, 오른쪽 피연산자에는 Side Effect가 발생하는 코드가 오면 안된다.
+    - Optional을 제외하고 동일한 자료형이어야 한다.
     - 왼쪽의 피연산자는 항상 Optional Expression이어야 하고, 오른쪽 피연산자는 Non-Optional Expression이어야 한다.
     - 먼저 왼쪽에 있는 피연산자에 값이 저장되어 있는지 확인한다(= Optional Expression이 값을 return하는지 확인한다). 값을 리턴한다면, 이 값을 Unwrapping한 다음 연산의 결과로 return한다.
-    - 만약 값이 저장되어 있지 않았다면(=Optional Expression이 값을 return하지 않았다면), 오른쪽 피연산자를 평가하고 그 결과를 리턴한다.
-      주로 값이 없을 때 사용할 기본값을 전달한다.
-    - 오른쪽 피연산자에는 Side Effect가 발생하는 코드가 오면 안된다.
+    - 만약 값이 저장되어 있지 않았다면(=Optional Expression이 값을 return하지 않았다면), 오른쪽 피연산자를 평가하고 그 결과를 return한다. 주로 값이 없을 때 사용할 기본값을 전달한다.
+
+    
 
     ```swift
     var msg = ""
@@ -140,18 +175,41 @@
     
     print(msg)
     
-    // 코드를 단순하게 해본다면,
+    // 코드를 조건 연산자를 통해 단순하게 해본다면,
     
     var str = "Hello, " + (input != nil ? input! : "Stranger")
     print(str)
+    
+    // 이전보다 코드가 단순해진건 맞지만,
+    // 여전히 값이 저장되어 있는지 확인하고 값을 추출하는 코드를 작성해야한다.
     
     
     // Nil-Coalescing Operator를 사용해본다면,
     
      str = "hello, " + (input ?? "Stranger")
     
-    // input이라는 변수에 Swift라는 값이 저장되어 있기 때문에, Unwrapping한 다음 hello, 라는 문자열과 연결한다.
+    // input이라는 변수에 Swift라는 값이 저장되어 있기 때문에, 해당 값을 Unwrapping한 다음 hello, 라는 문자열과 연결한다.
     ```
 
     
 
+- #### Optional Chaining
+  
+  - Optional Chaining의 결과는 항상 Optional이다.
+  - Optional에 값이 저장되어 있다면, 이어지는 속성에 접근한다.
+  - Optional Chaining에 포함된 표현식이 nil을 return한다면 이어지는 표현식을 평가하지 않고 nil을 리턴한다.
+  - Optional Chaining의 타입은 마지막 표현식의 타입으로 결정이되고 항상 Optional로 return이 된다.
+  - Optional 표현식을 통해서 속성에 접근하거나 메소드를 호출할때는 반드시 표현식 뒤에 `?` 를 사용한다.
+    (`!`도 사용할 수 있지만 되도록 사용하지 않는다.)
+
+
+
+
+
+------
+
+
+
+### **2.  기타메모**
+
+- Optional은 code를 Crash없이 처리할 때 주로 사용한다.
