--- a/200910.md
+++ b/200910.md
@@ -289,7 +289,7 @@
 - #### break
 
   - 현재 실행중인 문장을 종료하고, 이어지는 다음 문장으로 제어를 전달한다. (문장이 중첩되어 있을 경우 **가장 인접한 문장만 종료**한다.)
-    			 반복문과 switch문에서 사용한다.
+    반복문과 switch문에서 사용한다.
 
   
 
@@ -315,9 +315,10 @@
 - #### continue
 
   - 현재 실행중인 반복을 중지하고 다음 반복으로 제어를 전달(다음 반복을 시작)한다. **반복문에서만 사용**한다.  가장 **인접한 문장에만 영향**을 준다.
+  - 블록 마지막에 있으면 의미가 없다.
 
   
-  
+
   ```swift
   for num in 0...5 {
       if num.isMultiple(of: 2) {
