마크업 수정

--- a/200907.md
+++ b/200907.md
@@ -103,12 +103,11 @@
 
   - 상수와 변수에 저장할 수 있다.
   - 파라미터로 전달할 수 있다.
-
-  - 함수에서 리턴할 수 있다. 
-
-     // 📋  아직 내용은 모르지만 암기할 것!
-
+- 함수에서 리턴할 수 있다. 
   
+📋  아직 내용은 모르지만 암기할 것!
+  
+
 
 ------
 
