--- a/200907.md
+++ b/200907.md
@@ -103,10 +103,9 @@
 
   - 상수와 변수에 저장할 수 있다.
   - 파라미터로 전달할 수 있다.
-- 함수에서 리턴할 수 있다. 
-  
-📋  아직 내용은 모르지만 암기할 것!
-  
+  - 함수에서 리턴할 수 있다. 
+  - 📋  아직 내용은 모르지만 암기할 것!
+
 
 
 ------
@@ -117,12 +116,14 @@
 
 - #### 변수
 
-  `var` 	 영어로는 Variable. var 키워드로 선언할 수 있고, 값을 저장(초기화)할 수 있다.
+  `var` 	 영어로는 Variable. var 키워드로 선언할 수 있고, 값을 저장할 수 있다.
+
+  ​			  최초로 값을 저장하는 행위를 초기화라고 표현한다.
 
   ​			  값을 저장한 후에, 다시 값을 저장할 수 있다.
 
   ​			  같은 Identifier로 재선언할 수는 없다. ✨
-
+  
   ```swift
   var myAgeIs = 28
   myAgeIs = 29 // 🙆
@@ -160,8 +161,6 @@
   - UpperCamelCase: 타입(구조체, 열거형, 클래스, 프로토콜) 이름
 
   - lowerCamelCase: 변수나 상수의 이름, 함수 이름, 메소드 이름, 속성 이름
-
-
 
 
 
@@ -205,6 +204,8 @@
   - 소수점이 포함된 숫자형
 
     - 실수를 저장할 땐 지수와 가수를 나눠서 저장하기 때문에, 동일한 메모리 크기에서 정수에 비해 더 넓은 범위를 표현할 수 있다.
+    
+    
   - 부동 소수점 오차로 인해 100% 정확히 숫자를 입력할 수 없다.
     - `Double`   소수점이 포함된 숫자형의 기본 자료형.
       소수점 15자리 이상도 저장할 수 있으나 오차가 발생 (⚾︎ 소수점 숫자형의 기본 자료형)
@@ -215,12 +216,11 @@
   - 문자형
     
     - `String`  문자 또는 문장을 저장 가능 (⚾︎ 문자형의 기본 자료형)
-    
     - ` Character`  단 하나의 문자만 저장 가능
     
     
     
-    - Bool형: true 또는 false로 값을 나타내는 자료형
+  - Bool형: true 또는 false로 값을 나타내는 자료형
 
 
 
@@ -252,7 +252,7 @@ var areYouInsane: Bool = false
 
 - #### Type Conversion
 
-  - 자료형이 다르면, 연산이나 값을 저장하는 것이 불가능 하기 때문에 메모리에 저장된 값을 다른 형식으로 바꿔서 새로운 값✨ 을 생성해준다.
+  - 자료형이 다르면, 연산이나 값을 저장하는 것이 불가능 하기 때문에 메모리에 저장된 값을 다른 형식으로 바꿔서 새로운 값을 생성해준다. ✨
 
   - `자료형이름(컨버젼할 값)`의 형태로 사용할 수 있다.
 
