--- a/200911.md
+++ b/200911.md
@@ -90,7 +90,7 @@ var num2: Int? = nil
           statements
       }
       
-      guard name: Type = OptionalExpression else {
+      guard let name: Type = OptionalExpression else {
           statements
         }
       
