--- a/200909.md
+++ b/200909.md
@@ -144,12 +144,11 @@
 
   - `!`       Logical Not Operators (논리 부정 연산자)로 참을 거짓으로, 거짓을 참으로 바꿔준다. 전치 연산자로만 사용.
 
-  - `&&`     Logical And Operators로 모든 피연산자가 true일때만 true가 리턴이 되고 나머지 경우에는 모두 false로
-             리턴이 된다.
-     
+  - `&&`     Logical And Operators로 모든 피연산자가 true일때만 true가 리턴이 되고 나머지 경우에는 모두 false로 리턴이 된다.
+         
   - `||`     Logical OR Operators로 하나의 피연산자가 true여도 true가 리턴이 된다.
-
-  - `Short-circuit Evaluation`  단락평가, 결과 도출에 필요한 최소한의 논리식만 평가하는 방식 ✨
+  
+- `Short-circuit Evaluation`  단락평가, 결과 도출에 필요한 최소한의 논리식만 평가하는 방식 ✨
   
   - `Side Effect`     코드의 실행 결과로 인해, 값 또는 상태가 변경되는 것.
                               논리식에 Side Effect를 발생시킬 수 있는 코드가 포함되어 있는 경우,
