--- a/200914.md
+++ b/200914.md
@@ -15,6 +15,7 @@
 -  In-Out Parameters
 -  Function Notation
 -  Function Type
+-  First-class citizen
 
 
 
@@ -44,7 +45,7 @@
   // 함수는 호출해야 실행된다.
   
   name(parameters)
-  ```
+```
 
 
 
@@ -64,7 +65,7 @@
   add()
   // 함수를 호출한다.
   // return Keyword 뒤에있는 표현식을 평가하고, 평가한 결과 3이 도출이 된다.
-  ```
+```
 
 
 
@@ -75,8 +76,7 @@
   - `(Name: Type, name: Type)`
   - Parameter는 함수 Body에서 사용할 수 있는 **임시 상수**다.
   - 함수를 호출할 때 값을 전달해야 하므로, 호출하는 방법도 조금 달라진다.
-  - 할당연산자 `=`를 사용해, parameter에 기본값을 설정할 수 있다. `(a: Int ="0")`
-  - 우리가 직접 parameter로 값을 전달하지 않는다면, 기본값이 사용된다.
+  - 할당연산자 `=`를 사용해, parameter에 기본값을 설정할 수 있고,  `(a: Int ="0")` 이 때 직접 parameter로 값을 전달하지 않는다면, 기본값이 사용된다.
 
 
 ```swift
@@ -89,7 +89,7 @@
   // Return: 46
   // functionName(paramName: expr)
   // 전달할 값을 직접 쓰거나, 표현식을 적어 값을 전달할 수 있다. ✨
-  ```
+```
 
 
 
@@ -109,7 +109,7 @@
   print(findDifference(6, b: 4))
   
   // Prints: 2
-  ```
+```
 
 
 
@@ -129,7 +129,7 @@
   
   print(blackPink(members: "Jenni", "Jisoo", "Rose", "Lisa"))
   // Prints: 4
-  ```
+```
 
 
 
@@ -147,18 +147,21 @@
   
   var a = 100
   update(value: &a) // 200
-  ```
+```
 
   
 
 - #### Function Notation
 
+  - swift는 고유한 함수 표기법을 가지고 있다.
+  - Function Type을 이해하기 위해 숙지해야 한다.
+
 
 ```swift
   func sayHello() // sayHello
   func sayHello(to name: String) // sayHello(to:)
-  func sayHello(_ name: String) // sayHello(_:)
-  ```
+  func sayHello(_ name: String, _number: Int) // sayHello(_:_:)
+```
 
    
 
@@ -166,23 +169,41 @@
 
   - 함수에도 Type이 있다.
   - Function Type에서 빈 괄호`()`는 Void, ''없다'' 라는 뜻으로 사용된다.
-  - 타입에 return형이 없는 경우에도 `()`를 사용해서 명시적으로 표시를 해주어야 한다.
+  - Type에 return형이 없는 경우에도 `()`를 사용해서 명시적으로 표시를 해주어야 한다.
 
 
 ```swift
-  func printHello(with name: String) {
-    print("Hello, \(name)")
-  }
-  
-  let pH: (String) -> () = printHello(with:)
-  pH("World")
-  
-  // Prints: Hello, World
-  // 호출이 아닌 함수를 상수에 저장한 것.
-  // 상수를 통해서 함수를 호출할 땐, argument Label을 사용하지 않는다.
-  ```
+func add(num1: Int, num2: Int) {
+    num1 + num2
+}
+
+var a: (Int, Int) -> () = add(num1:num2:)
+
+// Type에 return형이 없는 경우에도 `()`를 사용해서 명시적으로 표시를 해주어야 한다. 
+```
 
   
+
+- #### First-class citizen
+
+  - 함수는 First-class citizen으로도 활용할 수 있다.
+    - 상수와 변수에 저장할 수 있다.
+    - 파라미터로 전달할 수 있다.
+    - 함수에서 return할 수 있다.
+  - 변수나 상수에 저장할 땐 argument값을 전달하지 않도록 조심해야 한다. argument값을 전달하면 함수를 전달하는 게 아닌, 함수를 호출하는 문법이 된다.
+  - 변수나 상수에 저장된 함수를 호출할 땐, argument Label을 생략한다.
+
+```swift
+func add(num1: Int, num2: Int) -> Int {
+    return num1 + num2
+}
+
+var a: (Int, Int) -> Int = add(num1:num2:)
+a(1, 2)
+
+// Returns: 3
+// 변수나 상수에 저장된 함수를 호출할 땐, argument Label을 생략한다.
+```
 
 
 
@@ -196,3 +217,4 @@
 - `{}` 밖에 있으면 함수, 함수 안에 있으면 함수, 메소드 안에 있으면 함수
 - 메소드, 타입, 구조체, 열거형 {} 안에 있으면 메소드
 - 호출 문법이 다르기 때문에 함수와 메소드의 차이를 알아두어야 한다. ✨
+- 변수나 상수를 선언할 땐 타입을 적지만, 변수에 값을 저장할 때 Type을 다시 적지는 않는다.
