20/09/18 내용 추가 및 수정

--- a/200916.md
+++ b/200916.md
@@ -36,12 +36,12 @@
   - Named Closures에는 앞에서 배운 Function과 Nested Function이 있다.
   - Anonymous Function를 Unnamed Closure, 익명함수라고도한다.
   - 자료형(Type)을 표현하는 방법은 함수와 완전히 동일하다. 이 말은 **함수와 Closure는 서로 호환**된다고 할 수 있다. 
-  - Global Scope에서 단독으로 작성할 수 없다.
-  - Closure도 함수와 마찬가지로 Fisrt Class Citizen이기 때문에 **상수나 변수에 저장해 사용**해야 한다. ✨
-  - (parameters) -> ReturnType 까지를 Closure Head라고 부르고 parameter와 return형이 없다면 생략할 수 있다.
-  - `in` Keyword로 Closure Head와 Closure Body를 구분지을 수 있다. 
+  - Global Scope에서 단독으로 작성할 수 없기 때문에 **상수나 변수에 저장해 사용**해야 한다. ✨
+  - Closure도 함수와 마찬가지로 Fisrt Class Citizen이다.
+  - (parameters) -> ReturnType 까지를 Closure Head라고 부르고(아래 문법 참고) parameter와 return형이 없다면 생략할 수 있다.
+  - 그 다음 따라오는 `in` Keyword로 Closure Head와 Closure Body를 구분지을 수 있다. 
   - **Closure를 호출할 땐 Argument Label을 사용하지 않는다.** ✨
-  - argument위치에 직접 작성한 closure를 inline closure라고 부른다.
+  - argument위치에 직접 작성한 Closure를 inline closure라고 부른다.
 
 
 ```swift
@@ -65,7 +65,8 @@ name()
   - 불필요한 요소를 최대한 생략하고 단순하게 작성하는데, 이걸 문법 최적화(Syntax Optimization)라고 한다.
     1. parameter와 return형 `in`을 생략할 수 있다.
     2. parameter이름을 Shorthand Argument Name($문자와 숫자의 조합)으로 대체할 수 있다.
-       - Shorthand Argument Name에서  parameter는 숫자로 대체되는데, 대체되는 숫자는 0부터 시작된다.  `$0`
+       - Shorthand Argument Name에서  parameter는 숫자로 대체할 수 있다.
+       -  대체되는 숫자는 0부터 시작된다.  `$0` `$1` `$2`...
     3. 단일 리턴문만 남아있을 경우 return Keyword를 생략한다. (Implicit Returns)
     4. Closure parameter가 마지막 parameter라면, In-line Closure가 아닌, Trailing Closure로 작성한다.
     5. `()`에 다른 parameter가 없다면, `()`도 생략해준다. 만약 Argument Label이 있다면 삭제한다.
@@ -130,4 +131,39 @@ var one = numbers.contains {
 
 ### **2.  기타메모**
 
-- -
+- Closure 안에서 밖에있는 View Controller의 속성에 접근하려면 반드시 self.를 붙여줘야 한다.
+- Closure 다시 한 번 정리해보기
+
+```swift
+let numbers = [1, 2, 3, 4]
+
+// Swift의 표준 라이브러리에는 sorted(by:)라는 배열 값을 정렬하는 메소드가 있다.
+// numbers 배열에 sorted(by:) 메소드를 사용해, 원하는 순서로 정렬을 바꿀 수 있다.
+// numbers.sorted(by:) 이렇게 점문법으로 사용한다.
+// sorted(by:) 메소드는 배열의 콘텐츠와 같은 타입이고, '두개의 파라미터를 가진 클로저'를 파라미터로 사용한다.
+
+
+// [#1] sorted(by:) 파라미터 타입을 만족시키는 함수를 만들었다.
+func reverse(num1: Int, num2: Int) -> Bool {
+    return num1 > num2
+}
+
+
+// [#2] sorted(by:) 파라미터 타입을 만족시키는 클로저를 만들었다.
+var reverseClosure = {(num1: Int, num2: Int) -> Bool in
+    return num1 > num2
+}
+
+// [#3] sorted(by:) 따로 정의된 형태가 아닌, 인자 위치에 바로 클로저를 작성할 수 있다.
+var reversedNumbers = numbers.sorted(by: {(num1: Int, num2: Int) -> Bool in
+    return num1 > num2
+})
+
+
+// [#4] 문법 최적화를 통해 최대한 간결하게 작성할 수 있다.
+numbers.sorted{ $0 > $1 }
+
+// [#5] 이런것도 된다.
+numbers.sorted(by: >)
+```
+
