--- a/200907.md
+++ b/200907.md
@@ -205,7 +205,6 @@
 
     - 실수를 저장할 땐 지수와 가수를 나눠서 저장하기 때문에, 동일한 메모리 크기에서 정수에 비해 더 넓은 범위를 표현할 수 있다.
     
-    
   - 부동 소수점 오차로 인해 100% 정확히 숫자를 입력할 수 없다.
     - `Double`   소수점이 포함된 숫자형의 기본 자료형.
       소수점 15자리 이상도 저장할 수 있으나 오차가 발생 (⚾︎ 소수점 숫자형의 기본 자료형)
@@ -295,11 +294,11 @@ var areYouInsane: Bool = false
 
 ### **5. 기타메모**
 
-- ##### 처음보는 키워드가 나올 경우 `⌥Option`키를 눌러서 바로바로 확인하기
+- 처음보는 키워드가 나올 경우 `⌥Option`키를 눌러서 바로바로 확인하기
 
-- ##### 번역기를 사용하면서 모르는 단어 정리해서 외우기 
+- 번역기를 사용하면서 모르는 단어 정리해서 외우기 
 
-- ##### 예습 → 리뷰 → 복습 패턴 익히기
+- 예습 → 리뷰 → 복습 패턴 익히기
 
-- ##### "호출한다"는 함수, 메소드를 실행한다는 의미이므로 구분해서 사용하기
+- "호출한다"는 함수, 메소드를 실행한다는 의미이므로 구분해서 사용하기
 
