--- a/200916.md
+++ b/200916.md
@@ -70,6 +70,7 @@ name()
     3. 단일 리턴문만 남아있을 경우 return Keyword를 생략한다. (Implicit Returns)
     4. Closure parameter가 마지막 parameter라면, In-line Closure가 아닌, Trailing Closure로 작성한다.
     5. `()`에 다른 parameter가 없다면, `()`도 생략해준다. 만약 Argument Label이 있다면 삭제한다.
+    6. 문법최적화에서 parameter를 사용하지 않을거라면, `_ in` 으로 대체해주어야 한다.
 
 ```swift
 var numbers = [1, 2, 3]
@@ -113,8 +114,10 @@ var one = numbers.contains {
 
 - #### Capturing Values
 
-  - closure 내부에서 외부에 있는 값에 접근하면, 값에 대한 참조를 획득한다.
-  - closure 내부에서 값을 바꾼다면, 외부에 있는 원래 값도 함께 바뀐다.
+  - Global Function은 값을 캡쳐(Capture)하지 않는다.
+  - Nested Function은 값을 캡쳐한다. 자신을 포함하고 있는 함수 Body에 있는 값에 접근할 때, 해당 값을 캡쳐한다.
+  - Closure 내부에서 외부에 있는 값에 접근하면, 값에 대한 참조를 획득한다.
+  - Closure 내부에서 캡쳐한 값을 바꾸면, 외부에 있는 원래 값도 함께 바뀐다.
 
 
 
