--- a/200918.md
+++ b/200918.md
@@ -15,12 +15,38 @@
 -  Raw String
 -  String Interpolation
 -  Format Specifier
+-  String Indices (String Index)
+-  String Basics
+-  Substring
 
 
 
-### **2.  기타메모**
+### **2.  String Editing**
 
-- -
+- Appending Strings and Characters
+- Replacing Substrings
+- Remove
+- String Comparison
+
+
+
+### **3.  String Options**
+
+- Case Insensitive Option
+- Literal
+- Backwards
+- Numeric
+- Diacritic Insensitive
+- Width Insensitive
+- Regular Expression ✨
+
+
+
+### **4.  Character Set**
+
+
+
+### **5.  기타메모**
 
 
 
@@ -39,9 +65,9 @@
 
 - #### String Types
 
-  - Swift는 두 가지 문자열 자료형을 사용한다. 공부를 하면서 사용했던 String은 구조체로 구현되어있는 Swift String이다.
+  - Swift는 두 가지 문자열 자료형을 사용한다. 공부를 하면서 사용했던 String은 구조체, 값 형식으로 구현되어있는 Swift String이다.
     문자형을 참조 형식으로 처리하고 싶다면 클래스로 구현되어 있는 NSString을 사용한다. 이 문자열은 Foundation String이라고 부른다. 
-    두 형식은 서로 호환된다. 호환이 된다고 서로 바로 저장할 수 있는 건 아니다. **Type Casting**을 해주어야 한다.
+  - 두 형식은 서로 호환된다. 호환이 된다고 서로 바로 저장할 수 있는 건 아니다. **Type Casting**을 해주어야 한다.
   - 두 자료형은 서로 호환이 가능하지만, 유니코드를 처리하는 방식이 다르다.
 
 ```swift
@@ -56,6 +82,16 @@ var swiftStr: String = nsStr as String
 
   - Swift 문자열의 가변성은 `let` Keyword와 `var` Keyword로 구분지을 수 있다.
   - 상수로 선언된 문자열은 초기화 후에 새로운 문자열을 저장할 수 없지만, 변수로 선언된 문자열은 초기화 후에도 새로운 문자열을 저장할 수 있다.
+  - 보통 속성값이 ~ing, ~ed의 형태라면 원본은 그대로 두고 새로운 값을 만든다. (값을 변경할 수 없는 상수와 호환)
+  - 속성값이 동사라면 원본을 변경한다. (값이 변경 가능한 변수와 호환)
+
+```swift
+let congratA = "Happy, Birthday"
+congratA.appending(" to you.")
+
+var congratB = "Happy, Birthday"
+congratB.append(" to you.")
+```
 
 
 
@@ -68,46 +104,12 @@ var swiftStr: String = nsStr as String
   - 끝나는 큰 따옴표는 문자열과 동일 선상에 있거나 왼쪽에 있어야 한다.
 
 
-```swift
-var multiline = """
-감
-자
-튀
-김
-감자튀김
-"""
-
-print(multiline)
-
-/*
-prints:
-감
-자
-튀
-김
-감자튀김
-*/
-```
-
-
 
 - #### Raw String
 
   - 문자열에 ""를 사용하고 싶을 땐, `"`앞에 `\`를 추가한다.
   - 문자열 Literal 양 끝을  `# #` 으로 감싸면, Raw String이 된다.
   - Raw String으로 처리한 문자열에 `\n`이 포함되어 있다면 `\`뒤에 `#`을 붙인다.
-
-```swift
-var say1 = "\"Hello\""
-var say2 = #""Hello""#
-
-print(say1)
-print(say2)
-
-// Prints: "Hello"
-// Prints: "Hello"
-// 결과는 동일
-```
 
 
 
@@ -133,11 +135,84 @@ var str = String(format: "%.1fKB", size)
 print(str)
 
 // Prints: 56.8KB
+
+// [#1]
+let dateFormat = DateFormatter()
+dateFormat.dateStyle = .medium
+dateFormat.timeStyle = .medium
+dateFormat.locale = Locale(identifier: "Ko_kr")
+
+if let str = dateFormat.string(for: Date()) {
+    "오늘은 \(str)입니다."
+}
+
+
+// [#2]
+let numberFormat = NumberFormatter()
+numberFormat.maximumFractionDigits = 2
+
+if let str = numberFormat.string(for: Double.pi) {
+    "pi값은 \(str)입니다."
+}
+
+// [#3]
+let salary = 45_000_000
+numberFormat.numberStyle = .currency
+numberFormat.locale = Locale(identifier: "Ko_kr")
+
+numberFormat.string(for: salary)
 ```
 
 
 
+- #### String Indices (String Index)
 
+  - String 형식이 제공하는 `.startIndex` 속성은 문자열의 첫 번째 index를 return한다.
+  - index(before:) 메소드는 파라미터로 전달한 index의 이전 index를 return한다. 
+  - index(after:) 메소드는 파라미터로 전달한 index의 다음 index를 return한다.
+  - sayHello.index(i: String Index, offsetBy: tring IndexDistance) index(_:offsetBy:) 메소드를 활용하면 i 속성을 기준으로 n만큼 떨어진 index를 구할 수 있다. offsetBy: 값은 정수를 사용할 수 있다.
+
+```swift
+let sayHello = "Hello, playground"
+
+var firstCharacter = sayHello[sayHello.startIndex]
+var thirdCharacter = sayHello[sayHello.index(sayHello.startIndex, offsetBy: 1)] // "e"
+thirdCharacter = sayHello[sayHello.index(sayHello.endIndex, offsetBy: -1)] // "d"
+
+// offsetBy를 사용할 때 범위를 벗어나면 앱에서 Crash가 발생하기 때문에, 주의해야한다.
+```
+
+
+
+- #### String Basics
+
+  - 문자열 생성자`String()`를 호출해, 빈 문자열을 만들 수 있다.
+  - 주로 다른값을 문자열로 변경할 때 사용한다.
+  - for _ in 반복문에서 사용할 수 있다. (열거할 수 있다.)
+  - `.count` 속성을 통해 문자열의 길이를 확인할 수 있다.
+  - `.isEmpty` 속성을 사용해 문자열이 비어있는지 아닌지 확인할 수 있다.
+  - `.lowercased()` 속성은 문자열의 모든 문자를 소문자로 바꿔준다.
+  - `.uppercased()` 속성은 문자열의 모든 문자를 대문자로 바꿔준다.
+  - `.capitalized()` 속성은 문자열에서 단어의 첫 문자를 대문자로 바꿔준다.
+
+
+
+- #### Substring
+
+  - Substring은 값을 읽기만 할 땐 원본 문자열의 메모리를 공유하고, 값을 변경하면 새로운 메모리가 생성된다.
+  - 문자열을 처리할 때, 메모리를 절약하기 위해 Substring을 사용한다.
+  - 이걸 Copy-on-Write 최적화라고 부른다.
+  - 문자열 생성자를 사용하면, 직접 새로운 문자열을 생성할 수 있다.
+
+```swift
+let sayHello = "Hello, playground"
+var first = sayHello.prefix(1) // "H", .prefix(n)은 n만큼 문자열의 길이만 표시해준다.
+
+first.insert("!", at: first.endIndex) // "H!"
+sayHello // "Hello, playground"
+
+// .insert속성으로 값을 변경하는 순간, 새로운 메모리가 생성됐기 때문에, sayHello에는 영향을 주지 않았다.
+```
 
 
 
@@ -145,7 +220,172 @@ print(str)
 
 
 
-### **2.  기타메모**
+### **2.  String Editing**
 
-- `.count` 속성을 통해 문자열의 길이를 확인할 수 있다.
+- #### Appending Strings and Characters
 
+  - `.append` 메소드를 사용하면 문자열 뒤에 새로운 문자열을 연결할 수 있다.
+  - Swift에서 원본을 변경하는 메소드의 이름은 대부분 동사다. 반면 원본을 변경하지 않고 결과를 새로운 문자열로 리턴하는 메소드의 이름은 -ed 또는 -ing의 형태다. `.append` 처럼 원본을 변경하는 메소드를 사용할 경우 반드시 변수에 사용해야 한다.
+
+```swift
+var congratulation = "Happy Birthday" // "Happy Birthday"
+
+congratulation.append(" to you") // "Happy Birthday to you"
+congratulation.appending(" and me.") // "Happy Birthday to you and me."
+
+congratulation // "Happy Birthday to you"
+```
+
+
+
+- #### Replacing Substrings
+
+  - 문자열을 대체할 땐, `.replaceSubrange` 메소드를 활용할 수 있다.
+  - `range(of:)` 메소드는 문자열에서 파라미터로 전달한 문자열을 검색한다. 일치하는 문자열이 없다면, nil을 리턴하기 때문에 Optional과 함께 사용한다.
+
+```swift
+var congratulation = "Happy Birthday"
+
+
+if let range = congratulation.range(of: "Birthday") {
+    congratulation.replaceSubrange(range, with: "Deathday")
+}
+// "Happy Deathday"
+
+congratulation.replacingOccurrences(of: "Birthday", with: "Deathday")
+// 이런 메소드를 사용하면 더 간단하게 바꿀 수 있다.
+
+if let range = congratulation.range(of: "B") {
+    congratulation.distance(from: congratulation.startIndex, to: range.lowerBound)
+} // 6
+
+// 만약 congratulation 문자열 안에, "B" 문자가 있을 경우, .distance 속성을 사용해,
+// B가 from을 기준으로 몇번째 떨어져 있는지 알려준다.
+```
+
+
+
+- #### Remove
+
+  - `removeAll()` 모든 문자를 삭제하고 빈 문자열로 만들어주는데, 메모리공간도 함께 삭제한다.
+  - 만약 비슷한 길이의 문자열을 다시 저장한다면, 메모리공간을 유지하는게 좋다. 이럴 땐, `removeAll(keepingCapacity: true)`를 사용하면 된다.
+  - `.removeSubrange()` 로 범위를 삭제할 수 있다.
+
+
+
+- #### String Comparison
+
+  - 문자열은 비교 연산자를 사용할 때, 대소문자를 구분한다.
+
+```swift
+var smallApple = "apple"
+var largeApple = "Apple"
+
+// 대소문자를 구분하기 때문에, 두번째 파라미터엔 .caseInsensitive Options를 전달했다.
+smallApple.compare(largeApple, options: [.caseInsensitive]) == .orderedSame // true
+
+smallApple.caseInsensitiveCompare(largeApple) == .orderedSame
+// 이렇게 조금 더 간단하게 표현해 줄 수 있다.
+```
+
+
+
+------
+
+
+
+### **3.  String Options**
+
+- #### Case Insensitive Option ✨
+
+  - `.caseInsensitive`옵션은 대소문자를 신경쓰지 않고 비교하고 싶을 경우 사용한다.
+
+
+
+- #### Literal
+
+  - `.literal` 이 옵션은 문자 코드를 직접 비교한다. 이 옵션을 사용한 경우가 실행속도가 더 빠르다.
+
+
+
+- #### Backwards
+
+  - `.Backwards` 문자열의 검색 방향을 Trailing에서 Leading으로 바꾸어 준다.
+  - 아랍어에 쓰기도 한다.
+
+
+
+- #### Numeric
+
+  - `.numeric` 문자열에 포함된 숫자를 숫자 크기 그대로 비교해준다.
+  - 파일명을 정렬할 때 쓰기도 한다.
+
+
+
+- #### Diacritic Insensitive
+
+  - `.diacriticInsensitive` 발음기호를 비교해준다.
+  - beyoncè 등에 쓰이기도 한다.
+
+
+
+- #### Width Insensitive
+
+  - `.widthInsensitive` 전각문자와 반각문자를 비교해준다.  
+  - 일본어를 사용할 때 쓰인다.
+
+
+
+- #### Regular Expression ✨
+
+  - .regularExpression 첫번째 파라미터로 전달된 문자열을 정규식으로 처리한다.
+  - 대상 문자열에서 정규식과 일치하는 문자열이 포함되어 있다면, 첫번째 범위가 리턴된다.
+  - 회원가입, 로그인 구현 등 자주 사용되는 옵션이다.
+
+```swift
+let emailPattern = "([0-9a-zA-Z_-]+)@([0-9a-zA-Z_-]+)(\\.[0-9a-zA-Z_-]+){1,2}"
+var emailAddress = "user@example.com"
+
+if let _ = emailAddress.range(of: emailPattern, options: .regularExpression) {
+    print("가입 가능한 이메일주소입니다.")
+} else {
+    print("이메일을 확인하세요.")
+}
+
+// prints: 가입 가능한 이메일주소입니다.
+// .regularExpression 옵션을 확인하는 코드이므로 아직 논리적인 오류가 있다. 주의.
+```
+
+
+
+------
+
+
+
+### **4.  Character Set**
+
+CharacterSet은 문자열에서 특정 문자를 검색하거나 삭제할 때 활용한다.
+
+- `CharacterSet.uppercaseLetters` 대문자만 포함된 CharacterSet
+- `CharacterSet.whitespaces` 공백, Tap 등이 포함된 CharacterSet
+- `CharacterSet(charactersIn: )` 직접 CharacterSet을 사용할 수도 있다.
+- `.components` 속성을 사용하면, 지정한 CharacterSet 에 포함된 문자에서 분할해 Array로 만들어준다. <-> `.joined()` 
+- `.inverted` 속성을 사용하면 반대값이 리턴된다.
+
+```swift
+var name: String = "임1꺽141정"
+name.components(separatedBy: CharacterSet.decimalDigits).joined() //"임꺽정"
+```
+
+
+
+------
+
+
+
+### **5.  기타메모**
+
+- DB키를 설정해야 할 때, 메인키는 문자가 아닌 숫자로해야한다. 
+- `.length` NSString에선 .count가 아닌 .length를 사용한다.
+
+- 문자열 Options을 받는 파라미터가 없다면, `lowercased()`또는 `Uppercased()`를 사용하여 대문자 또는 소문자로 직접 일치시켜주어야 한다.
