--- a/200918.md
+++ b/200918.md
@@ -302,9 +302,13 @@ smallApple.caseInsensitiveCompare(largeApple) == .orderedSame
 
 
 
+
+
 - #### Literal
 
   - `.literal` 이 옵션은 문자 코드를 직접 비교한다. 이 옵션을 사용한 경우가 실행속도가 더 빠르다.
+
+
 
 
 
@@ -315,10 +319,14 @@ smallApple.caseInsensitiveCompare(largeApple) == .orderedSame
 
 
 
+
+
 - #### Numeric
 
   - `.numeric` 문자열에 포함된 숫자를 숫자 크기 그대로 비교해준다.
   - 파일명을 정렬할 때 쓰기도 한다.
+
+
 
 
 
@@ -329,6 +337,8 @@ smallApple.caseInsensitiveCompare(largeApple) == .orderedSame
 
 
 
+
+
 - #### Width Insensitive
 
   - `.widthInsensitive` 전각문자와 반각문자를 비교해준다.  
@@ -336,9 +346,11 @@ smallApple.caseInsensitiveCompare(largeApple) == .orderedSame
 
 
 
+
+
 - #### Regular Expression ✨
 
-  - .regularExpression 첫번째 파라미터로 전달된 문자열을 정규식으로 처리한다.
+  - `.regularExpression` 첫번째 파라미터로 전달된 문자열을 정규식으로 처리한다.
   - 대상 문자열에서 정규식과 일치하는 문자열이 포함되어 있다면, 첫번째 범위가 리턴된다.
   - 회원가입, 로그인 구현 등 자주 사용되는 옵션이다.
 
