--- a/200918.md
+++ b/200918.md
@@ -399,5 +399,24 @@ name.components(separatedBy: CharacterSet.decimalDigits).joined() //"임꺽정"
 
 - DB키를 설정해야 할 때, 메인키는 문자가 아닌 숫자로해야한다. 
 - `.length` NSString에선 .count가 아닌 .length를 사용한다.
-
 - 문자열 Options을 받는 파라미터가 없다면, `lowercased()`또는 `Uppercased()`를 사용하여 대문자 또는 소문자로 직접 일치시켜주어야 한다.
+
+```swift
+// Hello를 *로 바꿔보기.
+
+var str = "Hello, playground"
+
+var replace = String(repeating: "*", count: 5) // "*****"
+
+var cut = str.index(str.endIndex, offsetBy: -12)
+var new = str[cut...] // ", playground"
+
+/*
+str[str.index(str.startIndex, offsetBy: 5)...str.index(before: str.endIndex)] 이것도 같고,
+str[str.index(str.startIndex, offsetBy: 5)...] 이렇게도 가능하다.
+문자열은 시작과 끝이 있기 때문에, 이렇게 범위 연산자를 사용해주면 유용하다. ✨
+*/
+
+var result = replace + new // "*****, playground"
+```
+
