--- a/200917.md
+++ b/200917.md
@@ -51,19 +51,27 @@
   - Tuple은 단일값으로 분해되어서 앞의 값부터 순서대로 저장이 된다.
   - Member 이름을 `_` 문자로 생략하면, 해당 Member는 분해대상에서 제외된다.
 
-  ```swift
-  let identify = (country: "대한민국", city: "경기도", age: 29)
-  
-  let country = identify.country
-  let city = identify.city
-  let age = identify.age
-  
-  // 이렇게 저장해도 문제는 없지만, Tuple Decomposition문법을 사용해서 쉽게 분해할 수 있다.
-  
-  let (country, city, age) = identify
-  print(age)
-  
-  // Prints: 29
-  ```
 
+```swift
+let identify = (country: "대한민국", city: "경기도", age: 29)
+
+let country = identify.country
+let city = identify.city
+let age = identify.age
+
+// 이렇게 저장해도 문제는 없지만, Tuple Decomposition문법을 사용해서 쉽게 분해할 수 있다.
+
+let (country, city, age) = identify
+print(age)
+
+// Prints: 29
+```
+
+```swift
+let someClosure: ((Int, String)) -> Bool = {(num: (numA: Int, str: String)) -> Bool in
+    return 
+}
+
+// 클로저의 파라미터로 튜플을 전달하고 싶을 땐 이렇게 적을 수 있다.
+```
 
