--- a/200916.md
+++ b/200916.md
@@ -75,39 +75,40 @@ name()
 ```swift
 var numbers = [1, 2, 3]
 var one = numbers.contains(where: {(num: Int) -> Bool in
-    return num == 4
+    return num == 1
 })
 
 print(one)
-// Prints: false
+// Prints: true
 
 
 // 문법 최적화 과정
 
 // 1. parameter와 parameter이름, return형을 생략한다.
-var one = numbers.contains(where: {
-    return num == 4
+numbers.contains(where: {
+    return num == 1
 })
 
 // 2. parameter이름을 Shorthand Argument Name으로 대체한다.
-var one = numbers.contains(where: {
-    return $0 == 4
+numbers.contains(where: {
+    return $0 == 1
 })
 
 // 3. Implicit Returns
-var one = numbers.contains(where: {
-    $0 == 4
+numbers.contains(where: {
+    $0 == 1
 })
 
 // 4. Trailing Closure로 변경한다.
-var one = numbers.contains(where: ){
-    $0 == 4
+numbers.contains(where: ){
+    $0 == 1
 }
 
 // 5. argument label과 ()를 생략한다.
-var one = numbers.contains {
-    $0 == 4
-}
+numbers.contains { $0 == 1 }
+
+// 6. 이것도 가능
+numbers.contains(1)
 ```
 
 
