--- a/200920.md
+++ b/200920.md
@@ -27,9 +27,15 @@
 
 ### **3.  Dictionary**
 
+- Dictonary
+- Updating Dictionary
+- Comparing Dictionary
+
 
 
 ### **4.  Set**
+
+### **5.  기타 메모**
 
 
 
@@ -176,7 +182,7 @@ dictionary.keys.sorted() // ["a", "b", "c"] Key를 배열로 리턴했기 때문
 
 
 
-- #### Dictionary Update
+- #### Updating Dictionary
 
   - Updat + Insert = Upsert라는 표현을 쓰기도 한다.
   - 동일한 기능을 하는 `.updateValue` 메소드도 있다.
