--- a/200920.md
+++ b/200920.md
@@ -1,4 +1,4 @@
-###### 20/09/20
+
 
 ------
 
@@ -104,36 +104,44 @@
 - #### Editing Array
 
   - `.append` 배열 마지막부분에 요소를 추가한다.
+  
   - `.append(contentsOf:)` 배열 마지막 부분에 두개 이상의 요소를 추가한다.
+  
   - `.insert` 배열 내 특정 위치에 요소를 추가한다.
+  
   - `.remove` 배열 내 특정 위치의 요소를 삭제해준다.
+  
   - `.removeFirst` 배열 첫번째 요소를 삭제한다.
+  
   - `.removeSubrange` 배열 내 특정 범위를 삭제한다.
+  
   - `.popLast()` 배열 마지막 요소를 삭제해준다. Optional String?을 리턴해서 코드에서 조금 더 안전하다.
-
-```swift
-let alphabet = "A B C D E F G"
-var alphabetArray = alphabet.components(separatedBy: " ")
-
-alphabetArray[0...2] = ["X","Y","Z"]
-
-alphabetArray[0...2] = ArraySlice<String>(repeating: "*", count: 3)
-alphabetArray.replaceSubrange(0...2, with: [String](repeating: "*", count: 3))
-alphabetArray[0...2] = [String](repeating: "*", count: 3) // 이건 타입이 다르기 때문에 안 됨!
-```
-
-```swift
-// 대소문자를 구별하지 않고 비교해보기.
-
-let arrayA = ["A", "B", "C"]
-let arrayB = ["a", "b", "c"]
-
-arrayA.elementsEqual(arrayB, by: { (elementA: String, elementB: String) -> Bool in
-    return elementA.caseInsensitiveCompare(elementB) == .orderedSame
-})
-
-arrayA.elementsEqual(arrayB) { $0.caseInsensitiveCompare($1) == .orderedSame }
-```
+  
+  - ```swift
+    let alphabet = "A B C D E F G"
+    var alphabetArray = alphabet.components(separatedBy: " ")
+    
+    alphabetArray[0...2] = ["X","Y","Z"]
+    
+    alphabetArray[0...2] = ArraySlice<String>(repeating: "*", count: 3)
+    alphabetArray.replaceSubrange(0...2, with: [String](repeating: "*", count: 3))
+    alphabetArray[0...2] = [String](repeating: "*", count: 3) // 이건 타입이 다르기 때문에 안 됨!
+    ```
+  
+    
+  
+  - ```swift
+    // 대소문자를 구별하지 않고 비교해보기.
+    
+    let arrayA = ["A", "B", "C"]
+    let arrayB = ["a", "b", "c"]
+    
+    arrayA.elementsEqual(arrayB, by: { (elementA: String, elementB: String) -> Bool in
+        return elementA.caseInsensitiveCompare(elementB) == .orderedSame
+    })
+    
+    arrayA.elementsEqual(arrayB) { $0.caseInsensitiveCompare($1) == .orderedSame }
+    ```
 
 
 
@@ -147,14 +155,17 @@ arrayA.elementsEqual(arrayB) { $0.caseInsensitiveCompare($1) == .orderedSame }
 - #### Sorting on Array
 
   - 동사이름을 가진 메소드는 배열을 직접 정렬한다.
+  
   - 불변배열을 새롭게 정렬하고 싶을 땐 ~ed 형태의 메소드를 활용하면 된다.
+  
   - `.reversed()` 메소드는 새로운 배열을 생성하지 않는다. 만약 역순으로 구성된 새로운 배열을 생성하고 싶다면, 배열생성자[]를 함께 사용해야한다.
+  
   - `.shuffle()` 요소의 순서가 랜덤하게 바뀐다.
-
-| 가변(var), 원본 메모리 공유 | 불변(let), 새로운 메모리에 저장 |
-| :-------------------------: | :-----------------------------: |
-|           .sort()           |            .sorted()            |
-|         .reverse()          |           .reversed()           |
+  
+  - | 가변(var), 원본 메모리 공유 | 불변(let), 새로운 메모리에 저장 |
+    | :-------------------------: | :-----------------------------: |
+    |           .sort()           |            .sorted()            |
+    |         .reverse()          |           .reversed()           |
 
 
 
@@ -167,42 +178,50 @@ arrayA.elementsEqual(arrayB) { $0.caseInsensitiveCompare($1) == .orderedSame }
 - #### Dictionary
   
   - Key와 Value 한 쌍이 하나의 요소로 저장되는 Collection이다.
+  
   - 배열과 다르게 정렬되어있지 않다. ✨
+  
   - Key는 중복되면 안된다.
+  
   - `DIctionary["Key"]`를 통해 Key와 연관된 Value에 접근할 수 있다.
+  
   - Dictionary는 해당 Key가 없다면 nil을 리턴해준다.
+  
   - `DIctionary["Key", default: "Empty"]` Key와 연관된 값이 없을 경우 기본값을 저장할 수도 있다. (이 경우는 키가 없을 경우에도 String 이기 때문에, non-Optional String이다!)
+  
   - `.keys`   `.values` 속성으로 각각 key와 Value를 배열로 얻을 수 있다.
-
-```swift
-var dictionary: [String: String] = ["a": "Apple", "b": "Banana", "c": "City"]
-var empty = [String: String]()
-dictionary.keys.sorted() // ["a", "b", "c"] Key를 배열로 리턴했기 때문에 sorted()로 정렬이 가능해졌다.
-```
-
-
+  
+  - ```swift
+    var dictionary: [String: String] = ["a": "Apple", "b": "Banana", "c": "City"]
+    var empty = [String: String]()
+    dictionary.keys.sorted() // ["a", "b", "c"] Key를 배열로 리턴했기 때문에 sorted()로 정렬이 가능해졌다.
+    ```
+  
+    
 
 - #### Updating Dictionary
 
-  - Updat + Insert = Upsert라는 표현을 쓰기도 한다.
+  - Update + Insert = Upsert라는 표현을 쓰기도 한다.
+  
   - 동일한 기능을 하는 `.updateValue` 메소드도 있다.
+  
   - Dictionary Key에 nil값을 저장하는 것은 해당 요소를 삭제하는 것과 같다.
-
-```swift
-var dictionary = [String: String]() // 빈 Dictionary를 생성했다.
-
-dictionary["A"] = "Apple" // "A" Key를 생성하면서 "Apple"값을 저장했고, 새로운 요소가 추가되었다.
-dictionary["A"] = "Ape" // "A" Key의 값을 "Ape"로 변경했다.
-
-dictionary // ["A": "Ape"]
-```
-
-```swift
-dictionary.removeValue(forKey: "A")
-dictionary["A"] = nil
-
-// 메소드를 활용하거나 nil을 저장해 원하는 Key를 삭제할 수 있다.
-```
+  
+  - ```swift
+    var dictionary = [String: String]() // 빈 Dictionary를 생성했다.
+    
+    dictionary["A"] = "Apple" // "A" Key를 생성하면서 "Apple"값을 저장했고, 새로운 요소가 추가되었다.
+    dictionary["A"] = "Ape" // "A" Key의 값을 "Ape"로 변경했다.
+    
+    dictionary // ["A": "Ape"]
+    ```
+  
+  - ```swift
+    dictionary.removeValue(forKey: "A")
+    dictionary["A"] = nil
+    
+    // 메소드를 활용하거나 nil을 저장해 원하는 Key를 삭제할 수 있다.
+    ```
 
 
 
@@ -239,6 +258,33 @@ dictionary["A"] = nil
 ### **5.  기타 메모**
 
 - `.forEach` 메소드를 활용하면 Collection안에 있는 요소들을 나열할 수 있다. ✨
-- Array를 제외한 컬렉션은 정렬된 컬렉션이 아니기때문에, 출력할 때마다 순서가 달라진다.
-- `for_in` 반복문을 활용하면 continue와 break를 같이 활용해, 흐름제어를 할 수 있다. (반복문 안에서 return문을 사용할 경우, 반복문 전체를 종료하기때문에, 주의해서 사용할 것)
 
+- Array를 제외한 컬렉션은 정렬된 컬렉션이 아니기때문에, 출력할 때마다 순서가 달라진다.
+
+- ```swift
+  // 연습
+  
+  var list = [
+      ["name": "피카츄", "age": "1"],
+      ["name": "파이리", "age": "2"],
+      ["name": "꼬부기", "age": "4"],
+      ["name": "라이츄", "age": "5"],
+      ["name": "버터풀", "age": "9"],
+      ["name": "야도란", "age": "3"],
+  ]
+  
+  list.sort { (numA: [String : String], numB: [String : String]) -> Bool in
+      return numA["age"]!.compare(numB["age"]!, options: .numeric) == .orderedAscending
+  }
+  
+  // .sort 메소드를 활용해 정렬하고 싶었지만, element의 속성이 Optional이라 Forced Unwrapping을 해주었다.
+  // Forced Unwrapping은 잦은 에러와 코딩 테스트에서 감점 대상이므로, 조금 귀찮더라도 꼭 옵셔널 바인딩을 해줘야 한다.
+  
+  list.sort { $0["age"]!.compare($1["age"]!, options: .numeric) == .orderedAscending }
+  // 문법 최적화를 해준다음,
+  
+  list.sort { guard let age1 = $0["age"], let age2 = $1["age"] else { return false }
+      return age1.compare(age2, options: .numeric) == .orderedAscending
+  }
+  // 옵셔널 바인딩을 통해 else 문 안에는 false를 리턴해주고, 그 다음에 리턴하려는 코드를 작성한다.
+  ```
