--- a/200917.md
+++ b/200917.md
@@ -23,7 +23,7 @@
 
 - #### Tuple
 
-  - `()`를 사용해 Tuple은 두 개 이상의 값을 저장할 수 있게 해준다. 
+  - Tuple은 `()` 사이에 두 개 이상의 값을 저장할 수 있다.
   - Tuple에 저장된 하나의 값은 Tuple Member라고 부른다.
   - 서로 다른 형식의 값을 저장하는 것도 가능하다.
   - Tuple에 저장된 Member의 수는 Tuple을 만들 때 결정되지만, Member의 값을 바꿀 수는 있다.
@@ -48,30 +48,30 @@
 - #### Tuple Decomposition
 
   - Tuple에 저장되어있는 어떤 Member를 개별 상수나 개별 변수에 따로 저장하는 것이다.
+  
   - Tuple은 단일값으로 분해되어서 앞의 값부터 순서대로 저장이 된다.
+  
   - Member 이름을 `_` 문자로 생략하면, 해당 Member는 분해대상에서 제외된다.
-
-
-```swift
-let identify = (country: "대한민국", city: "경기도", age: 29)
-
-let country = identify.country
-let city = identify.city
-let age = identify.age
-
-// 이렇게 저장해도 문제는 없지만, Tuple Decomposition문법을 사용해서 쉽게 분해할 수 있다.
-
-let (country, city, age) = identify
-print(age)
-
-// Prints: 29
-```
-
-```swift
-let someClosure: ((Int, String)) -> Bool = {(num: (numA: Int, str: String)) -> Bool in
-    return 
-}
-
-// 클로저의 파라미터로 튜플을 전달하고 싶을 땐 이렇게 적을 수 있다.
-```
-
+  
+  - ```swift
+    let identify = (country: "대한민국", city: "경기도", age: 29)
+    
+    let country = identify.country
+    let city = identify.city
+    let age = identify.age
+    
+    // 이렇게 저장해도 문제는 없지만, Tuple Decomposition문법을 사용해서 쉽게 분해할 수 있다.
+    
+    let (country, city, age) = identify
+    print(age)
+    
+    // Prints: 29
+    ```
+  
+  - ```swift
+    let someClosure: ((Int, String)) -> Bool = {(num: (numA: Int, str: String)) -> Bool in
+        return 
+    }
+    
+    // 클로저의 파라미터로 튜플을 전달하고 싶을 땐 이렇게 적을 수 있다.
+    ```
