--- a/200914.md
+++ b/200914.md
@@ -32,20 +32,22 @@
 - #### Function
 
   - 특정 기능을 수행하는 코드조각. 함수를 만드는 것을 '함수를 선언한다, 함수를 구현한다.' 라고 표현한다.
+  
   - 자주 사용하는 기능을 함수로 만들어두면, 언제든지 다시 사용할 수 있다.
-  - 함수이름은 lowerCamelCase로 지어야 하고, 직관적인 이름을 지어야 한다.
+  
+  - 함수이름은 lowerCamelCase로 지어야 하고, 직관적인 이름으로 지어야 한다.
+  
   - 함수가 값을 리턴하지 않는다면, Return 화살표와 return형을 모두 생략할 수 있다.
-
-
-```swift
-  func name(parameters) -> ReturnType {
-    statements
-  }
   
-  // 함수는 호출해야 실행된다.
-  
-  name(parameters)
-```
+  - ```swift
+    func name(parameters) -> ReturnType {
+      statements
+    }
+    
+    // 함수는 호출해야 실행된다.
+    
+    name(parameters)
+    ```
 
 
 
@@ -53,19 +55,20 @@
 - #### Return Values
 
   - return문(return Keyword + expresstion)은 함수를 종료하고, 표현식을 평가한 결과를 return한다.
-  - 함수가 return한 값은 함수를 호출한 부분으로 간다.
-  - 함수가 return한 결과를 상수에 저장하는 것도 가능하다.
-
-
-```swift
-  func add() -> Int {
-  	return 1 + 2 
-  }
   
-  add()
-  // 함수를 호출한다.
-  // return Keyword 뒤에있는 표현식을 평가하고, 평가한 결과 3이 도출이 된다.
-```
+  - 함수가 return한 값은 함수를 호출한 부분으로 간다.
+  
+  - 함수가 return한 결과를 상수에 저장하는 것도 가능하다.
+  
+  - ```swift
+    func add() -> Int {
+      return 1 + 2 
+    }
+    
+    add()
+    // 함수를 호출한다.
+    // return Keyword 뒤에있는 표현식을 평가하고, 평가한 결과 3이 도출이 된다.
+    ```
 
 
 
@@ -73,114 +76,121 @@
 - #### Parameters
 
   - 함수로 전달하는 값을 Parameter라고 한다.
+  
   - `(Name: Type, name: Type)`
+  
   - Parameter는 함수 Body에서 사용할 수 있는 **임시 상수**다.
+  
   - 함수를 호출할 때 값을 전달해야 하므로, 호출하는 방법도 조금 달라진다.
-  - 할당연산자 `=`를 사용해, parameter에 기본값을 설정할 수 있고,  `(a: Int ="0")` 이 때 직접 parameter로 값을 전달하지 않는다면, 기본값이 사용된다.
-
-
-```swift
-  func add(a: Int, b: Int) -> Int {
-  	return a + b
-  }
   
-  functionName(a: 12, b: 34)
+  - 할당연산자 `=`를 사용해, parameter에 기본값을 선언할 수 있고,  `(a: Int ="0")` 이 때 직접 parameter로 값을 전달하지 않는다면, 기본값이 사용된다.
   
-  // Return: 46
-  // functionName(paramName: expr)
-  // 전달할 값을 직접 쓰거나, 표현식을 적어 값을 전달할 수 있다. ✨
-```
-
-
+  - ```swift
+    func add(a: Int, b: Int) -> Int {
+      return a + b
+    }
+    
+    functionName(a: 12, b: 34)
+    
+    // Return: 46
+    // functionName(paramName: expr)
+    // 전달할 값을 직접 쓰거나, 표현식을 적어 값을 전달할 수 있다. ✨
+    ```
+  
+    
 
 
 - #### Argument Label
 
-  - 함수 이름에 가독성을 높이기 위해서 사용한다.
+  - 파라미터의 가독성을 높이기 위해서 사용한다.
+  
   - `_`를 사용해서 생략할 수 있다.
+  
   - Argument Label은 함수를 호출하기 위해 사용하는 이름이기 때문에, 함수 안에서 parameter에 접근하기 위해 사용할 수 없다.
-
-
-```swift
-  func findDifference(_ a: Int, b: Int) -> Int {
-    return a - b
-  }
   
-  print(findDifference(6, b: 4))
-  
-  // Prints: 2
-```
+  - ```swift
+    func findDifference(_ a: Int, b: Int) -> Int {
+    	return a - b
+    }
+    
+    print(findDifference(6, b: 4))
+    
+    // Prints: 2
+    ```
 
 
 
 - #### Variadic Parameters
 
   - Variadic Parameters에서는 하나 이상의 argument를 전달할 수 있다.
-  - 전달 가능한 argument 수가 고정되어 있지 않기 때문에 가변 parameter라고 부른다.
-  - Variadic Parameters는 한 번만 선언할 수 있다.
-  - Variadic Parameters는 기본값을 가질 수 없다.
-
-
-```swift
-  func blackPink(members: String...) -> Int {
-    let allMembers = members.count
-    return allMembers
-  }
   
-  print(blackPink(members: "Jenni", "Jisoo", "Rose", "Lisa"))
-  // Prints: 4
-```
-
-
+  - 전달 가능한 argument 수가 고정되어 있지 않기 때문에 가변 parameter라고 부른다.
+  
+  - Variadic Parameters는 한 번만 선언할 수 있다.
+  
+  - Variadic Parameters는 기본값을 가질 수 없다.
+  
+  - ```swift
+    func blackPink(members: String...) -> Int {
+      let allMembers = members.count
+      return allMembers
+    }
+      
+    print(blackPink(members: "Jenni", "Jisoo", "Rose", "Lisa"))
+    // Prints: 4
+    ```
+  
+    
 
 - #### In-Out Parameters
 
   - inout 키워드를 통해 argument로 전달된 변수의 값을 직접 바꿀 수 있다.
-  - 기본값을 선언할 수 없고, Variadic Parameters를 사용할 수 없다.
-
-
-```swift
-  func update(value: inout Int) {
-      value = value * 2
-      print(value)
-  }
   
-  var a = 100
-  update(value: &a) // 200
-```
+  - 기본값을 선언할 수 없고, Variadic Parameters를 사용할 수 없다.
+  
+  - ```swift
+    func update(value: inout Int) {
+        value = value * 2
+        print(value)
+    }
+      
+    var a = 100
+    update(value: &a) // 200
+    ```
 
   
 
 - #### Function Notation
 
   - swift는 고유한 함수 표기법을 가지고 있다.
+  
   - Function Type을 이해하기 위해 숙지해야 한다.
-
-
-```swift
-  func sayHello() // sayHello
-  func sayHello(to name: String) // sayHello(to:)
-  func sayHello(_ name: String, _number: Int) // sayHello(_:_:)
-```
-
-   
+  
+  - ```swift
+    func sayHello() // sayHello
+    func sayHello(to name: String) // sayHello(to:)
+    func sayHello(_ name: String, _number: Int) // sayHello(_:_:)
+    ```
+  
+    
 
 - #### Function Type
 
   - 함수에도 Type이 있다.
+  
   - Function Type에서 빈 괄호`()`는 Void, ''없다'' 라는 뜻으로 사용된다.
+  
   - Type에 return형이 없는 경우에도 `()`를 사용해서 명시적으로 표시를 해주어야 한다.
-
-
-```swift
-func add(num1: Int, num2: Int) {
-    num1 + num2
-}
-
-var a: (Int, Int) -> () = add(num1:num2:)
-
-// Type에 return형이 없는 경우에도 `()`를 사용해서 명시적으로 표시를 해주어야 한다. 
-```
+  
+  - ```swift
+    func add(num1: Int, num2: Int) {
+        num1 + num2
+    }
+    
+    var a: (Int, Int) -> () = add(num1:num2:)
+    
+    // Type에 return형이 없는 경우에도 `()`를 사용해서 명시적으로 표시를 해주어야 한다. 
+    ```
 
   
 
@@ -190,22 +200,24 @@ var a: (Int, Int) -> () = add(num1:num2:)
     - 상수와 변수에 저장할 수 있다.
     - 파라미터로 전달할 수 있다.
     - 함수에서 return할 수 있다.
+    
   - 변수나 상수에 저장할 땐 argument값을 전달하지 않도록 조심해야 한다. argument값을 전달하면 함수를 전달하는 게 아닌, 함수를 호출하는 문법이 된다.
+  
   - 변수나 상수에 저장된 함수를 호출할 땐, argument Label을 생략한다.
-
-```swift
-func add(num1: Int, num2: Int) -> Int {
-    return num1 + num2
-}
-
-var a: (Int, Int) -> Int = add(num1:num2:)
-a(1, 2)
-
-// Returns: 3
-// 변수나 상수에 저장된 함수를 호출할 땐, argument Label을 생략한다.
-```
-
-
+  
+  - ```swift
+    func add(num1: Int, num2: Int) -> Int {
+        return num1 + num2
+    }
+    
+    var a: (Int, Int) -> Int = add(num1:num2:)
+    a(1, 2)
+    
+    // Returns: 3
+    // 변수나 상수에 저장된 함수를 호출할 땐, argument Label을 생략한다.
+    ```
+  
+    
 
 ------
 
@@ -218,3 +230,4 @@ a(1, 2)
 - 메소드, 타입, 구조체, 열거형 {} 안에 있으면 메소드
 - 호출 문법이 다르기 때문에 함수와 메소드의 차이를 알아두어야 한다. ✨
 - 변수나 상수를 선언할 땐 타입을 적지만, 변수에 값을 저장할 때 Type을 다시 적지는 않는다.
+
