--- a/200911.md
+++ b/200911.md
@@ -27,21 +27,25 @@
 - #### Optional Type
 
   - 값을 저장할 수도 있고, 저장하지 않을(nil)수도 있다.
+  
   - Non-optional Type 뒤에 `?`를 붙여준다.
+  
   - `nil`은 값이 없음을 나타내는 키워드이다.
+  
   - `nil`은 추론할 수 있는 형식이 없기 때문에, 꼭 Type annotation으로 타입을 지정해주어야 한다.
+  
   - 표현식을 평가한 결과가 Optional로 return이 되면, Optional Expression이라고 한다.
-
-```swift
-var num1: Int = 0
-var num2: Int? = nil
-```
+  
+  - ```swift
+    var num1: Int = 0
+    var num2: Int? = nil
+    ```
 
 
 
 - #### Unwrapping
 
-  - Optional로 포장된 값을 추출하고 Unwrapping이라고 부른다. Unwrapping하면 Non-optional Type으로 결과가 return된다.
+  - Optional 에 저장된 값을 추출하는 것을 Unwrapping이라고 한다. Unwrapping하면 Non-optional Type으로 결과가 return된다.
   - Optional Type에 저장된 값을 사용하려면 반드시 Unwrapping해야 한다.
 
   - Forced Unwrapping 😈
@@ -63,7 +67,7 @@ var num2: Int? = nil
 
   
 
-  - Optional Binding 😇
+  - Optional Binding ✨
 
     - Optional Binding을 사용해서 안전하고 직관적으로 Unwrapping할 수 있다.
 
