--- a/200910.md
+++ b/200910.md
@@ -44,29 +44,21 @@
 
   - 조건의 참과 거짓을 판단하고 실행할 코드를 결정하는 문장. if 블록에서 구현한 코드는 condition이 true인 경우에만 실행된다. ✨
   
-- `else`  if 블록 짝꿍. else블록에서 구현한 코드는 if블록의 condition이 false로 평가된 경우 실행된다.
-  
+  - `else`  if 블록 짝꿍. else블록에서 구현한 코드는 if블록의 condition이 false로 평가된 경우 실행된다.
+    
   - `else`  블록은 한 번만 작성할 수 있고 생략할 수 있다.
   
   - `else if` 블록은 if 블록과 else 블록 사이에 위치한다. if 블록의 condition이 false로 평가될 경우, 이어지는 다음 else if 블록이 실행되고, true로 평가될 경우 블록이 실행된다. false로 평가되는 경우 다시 이어지는 다음 블록으로 실행이 된다. else if 블록은 이론상 원하는 만큼 언제든지 추가할 수 있다. 
   
-     - else if 블록과 else 블록은 if 문(if 블록)을 사용할 때만 사용 가능하다. 
+  - else if 블록과 else 블록은 if 문(if 블록)을 사용할 때만 사용 가능하다. 
   
-     - 생략하면 if 조건문이 아니기 때문에, if 블록은 당연히 생략할 수 없다.
+  - 생략하면 if 조건문이 아니기 때문에, if 블록은 당연히 생략할 수 없다.
   
    - if 블록 안에 또 다른 if 블록을 넣어 원하는 값을 얻을 수 있다.
   
    - 순차적으로 condition을 평가하기 떄문에, 원하는 결과를 얻기 위해선 가장 까다로운 조건을 먼저 처리해야 한다. ✨
   
-  - ```swift
-     if condition {
-     	 statements
-     }
-     
-     // condition은 Boolean 표현식이어야 한다. ✨
-     ```
-  
-  - ```swift
+   - ```swift
      let myAgeIs: Int = 29
      
      if myAgeIs > 30 {
@@ -78,14 +70,19 @@
      /*
      Prints: 당신은 20대입니다.
      myAgeIs값이 30보다 작으니까 condition이 false로 평가된다.
-   if블록의 condition이 false인 경우 else블록이 실행된다.
-     */
+      if블록의 condition이 false인 경우 else블록이 실행된다.
+     *
      ```
-   ```
   
-   ```
+  - ```swift
+     if condition {
+     	 statements
+     }
+     
+     // condition은 Boolean 표현식이어야 한다. ✨
+     ```
   
-- ```swift
+  - ```swift
      var weather = "☔️"
      
      if weather == "☀️" {
@@ -100,9 +97,9 @@
      
      // Prints: 아맞다, 우산!
      ```
-
   
-
+    
+  
 - ####   switch 문
 
   - `switch 문`은 값의 일치 여부에 따라서 실행할 코드를 결정한다. 패턴 매칭이나 값 매칭을 할 때 사용된다.
@@ -154,23 +151,23 @@
 - #### guard 문
 
   - guard문의 condition이 false로 평가되면 else블록이 실행된다.
-  
+
   - `Early Exit`: 원하는 조건이 충족되지 않으면, 불필요한 코드는 실행하지 않고 일찍 종료한다. guard문은 Ealry Exit에 유용하다.
-  
+
   - optionalBinding과 사용할 수 있다.
 
   - 대부분 Locap Scope에서 사용한다.
-  
+
   - return이나 throw를 사용해서 코드의 사용을 중지해야 한다. 
-  
+
   - 복잡한 조건일 경우 사용한다.
-  
+
   - ```swift
     guard condition else {
     statements
     }
     ```
-  
+
     
 
 ------
@@ -261,11 +258,9 @@
     
     print(num)
     
-    /*
-    일단 condition에 관계 없이 repeat코드블록을 실행한다. 그 다음, 조건을 평가한다.
-  Prints: 101
-    */ 
-    ```
+    /* 일단 condition에 관계 없이 repeat코드블록을 실행한다. 그 다음, 조건을 평가한다.
+    Prints: 101 */ 
+  ```
   
   
 
@@ -318,17 +313,15 @@
     }
     
     /*
-    
     Prints: 1
     Prints: 3
     Prints: 5
     
     짝수인 경우 continue를 사용했기 때문에 홀수만 출력된다.
     for in 반복문은 지정한 대로 0부터 5까지 6번 반복되었다.
-    
     */
     ```
-
+  
   
 
 - #### fallthrough
